Fix waves overlapping searchbar

--- a/src/pages/sites/sites.module.scss
+++ b/src/pages/sites/sites.module.scss
@@ -28,6 +28,7 @@
 
 .headerText {
   // padding-top: 5rem;
+  z-index: 10;
   padding-bottom: 12rem;
 
   @include mq($until: lg) {
